# QtReports-OLD

./: .codeclimate.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  QtReports.sln  README.md  create.sh  detail.xml  engine.hpp  gcov.css  group.odt  index-sort-f.html  index-sort-l.html  index.html  processeddb.cpp  processeddb.hpp  qtreportslib_tests.pro  report.cpp  sample.xml
.travis/: script.sh
Examples/: Bugs.txt  Group-1.qrxml  Group-2.qrxml  README.txt  info.txt  input  report.qrxml  reportGraphicelement.qrxml
QtReports/: qtreportsviewer.pro
develop/: index-sort-f.html  index-sort-l.html  index.html
doc/: TemplateOut.docx  default.qreport  group.docx  newReport.qrxml
examples/: newReport.qrxml  newReport1.qrxml  reportGraphicelement.qrxml
html/: annotated.html  annotated_dup.js  band_8hpp_source.html  classes.html  classqtreports_1_1_engine-members.html  classqtreports_1_1_engine.html  classqtreports_1_1_engine.js  classqtreports_1_1detail_1_1_band-members.html  classqtreports_1_1detail_1_1_band.html  classqtreports_1_1detail_1_1_band.js  classqtreports_1_1detail_1_1_converter_to_h_t_m_l-members.html  classqtreports_1_1detail_1_1_converter_to_h_t_m_l.html  classqtreports_1_1detail_1_1_converter_to_h_t_m_l.js  classqtreports_1_1detail_1_1_converter_to_p_d_f-members.html  classqtreports_1_1detail_1_1_converter_to_p_d_f.html  classqtreports_1_1detail_1_1_converter_to_p_d_f.js  classqtreports_1_1detail_1_1_converter_to_q_widget-members.html  classqtreports_1_1detail_1_1_converter_to_q_widget.html  classqtreports_1_1detail_1_1_converter_to_q_widget.js  classqtreports_1_1detail_1_1_detail-members.html  classqtreports_1_1detail_1_1_detail.html  classqtreports_1_1detail_1_1_detail.js  classqtreports_1_1detail_1_1_ellipse-members.html  classqtreports_1_1detail_1_1_ellipse.html  classqtreports_1_1detail_1_1_field-members.html  classqtreports_1_1detail_1_1_field.html  classqtreports_1_1detail_1_1_field.js  classqtreports_1_1detail_1_1_group-members.html  classqtreports_1_1detail_1_1_group.html  classqtreports_1_1detail_1_1_image-members.html  classqtreports_1_1detail_1_1_image.html  classqtreports_1_1detail_1_1_line-members.html  classqtreports_1_1detail_1_1_line.html  classqtreports_1_1detail_1_1_object-members.html  classqtreports_1_1detail_1_1_object.html  classqtreports_1_1detail_1_1_object.js  classqtreports_1_1detail_1_1_objects_plant-members.html  classqtreports_1_1detail_1_1_objects_plant.html  classqtreports_1_1detail_1_1_objects_plant.js  classqtreports_1_1detail_1_1_painter-members.html  (+94 more)
master/: index-sort-f.html  index-sort-l.html  index.html
qtreportslib/: Makefile  Makefile.Debug  Makefile.Release  converter.cpp  converter.hpp  engine.cpp  engine.cpp.func-sort-c.html  engine.cpp.func.html  engine.cpp.gcov.html  engine.hpp  index-sort-f.html  index-sort-l.html  index.html  moc_engine.cpp.func-sort-c.html  moc_engine.cpp.func.html  moc_engine.cpp.gcov.html  object_script.libqtreportslib.Release  object_script.libqtreportslibd.Debug  objectsplant.cpp  objectsplant.hpp  painter.cpp  painter.hpp  parser.cpp  parser.hpp  processeddb.cpp  (+6 more)
(+799 files in other folders)
